Add Client Layer

--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=MONSTER69\\SQLEXPRESS;Initial Catalog=NLayerDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "SqlConnection": "Data Source=MONSTER69\\SQLEXPRESS;Initial Catalog=NLayerDB ;Connect Timeout=30;Integrated Security=True;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
